--- a/HrachLab13-14-1.htm
+++ b/HrachLab13-14-1.htm
@@ -17,19 +17,19 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-xl-6 block, col-lg-4 block" style="background-color: lightgoldenrodyellow, white;">Ліва частина шапки</div>
-            <div class="col-xl-6 block, col-lg-8 block" style="background-color: white, pink;">Права частина шапки</div>
+            <div class="col-xl-8 block, col-lg-4 block" style="background-color: lightgoldenrodyellow, white;">Ліва частина шапки</div>
+            <div class="col-xl-4 block, col-lg-8 block" style="background-color: white, pink;">Права частина шапки</div>
         </div>
 
         <div class="row">
-            <div class="col-xl-2 block" style="background-color: white;">Ліве меню</div>
-            <div class="col-xl-8 block" style="background-color: white;">Контент</div>
-            <div class="col-xl-2 block" style="background-color: white;">Праве меню</div>
+            <div class="col-xl-2, col-lg-2 block" style="background-color: white;">Ліве меню</div>
+            <div class="col-xl-8, col-lg-8 block" style="background-color: white;">Контент</div>
+            <div class="col-xl-2, col-lg-2 block" style="background-color: white;">Праве меню</div>
         </div>
 
         <div class="row">
-            <div class="col-xl-6 block" style="background-color: white;">Ліва частина підвалу</div>
-            <div class="col-xl-6 block" style="background-color: lightgoldenrodyellow;">Права частина підвалу</div>
+            <div class="col-xl-4 block, col-lg-8  block" style="background-color: white, pink;">Ліва частина підвалу</div>
+            <div class="col-xl-8 block, col-lg-4  block" style="background-color: lightgoldenrodyellow;">Права частина підвалу</div>
         </div>
      </div>
      
